[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
futures = "0.3.25"
reqwest = {version = "0.11.12", features = ["json"]}
serde_json = "1.0.87"
tokio = {version = "1.21.2", features = ["full"]}
